[package]
name = "nikel-cli"
version = "0.1.5"
authors = ["George-Lewis <georgejeffreylewis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nikel-rs = "0.1.3"
#nikel-rs = { path ="//Storage/Projects/Nikel-rs" }
rustyline = "6.2.0"